# ai-autonomous-trading-os

./: .gitignore  AGENTS.md  README.md  apply_fix.py  parse_round1.py  parse_variants.py
implementation/: .b4_3b3_final_ci_trigger  .b4_3b3_final_validation_trigger  PRODUCT_COMPLETION_CHECKLIST.md  README.md  RUN.md  pyproject.toml
implementation/config/: c0a_canonical_expected.json  c0b_matrix.json  c0c_cost_aware_ema.json  c1a_strategy_family_screen.json  c2a_low_turnover_allocation.json  c2a_public_data.json  c3a_public_data.json  c3a_residual_mean_reversion.json  c4a_large_liquid_cross_sectional_momentum.json  c5a_derivatives_crowding_regime.json  c6a_common_crawl_probe_inventory_v1.json  c6a_common_crawl_raw_cdxj_probe_inventory_v1.json  c6a_execution_contract_v2.json  c6a_market_neutral_funding_carry.json  c6a_source_authority_query_inventory_v1.json  policy.experiment_round1.json  policy.json  policy.validation.json
implementation/python/: atos_core.py  cli.py  decision_layer.py  history_replay.py  ledger_store.py  market_data.py  models.py  paper_executor.py  production_guard.py  provider_layer.py  review_layer.py  risk_engine.py  run_demo.py  strategy_pool.py
implementation/scripts/: benchmark_b4_3b_lifecycle.py  c0c_development_core.py  c1a_contract_completion.py  c1a_data_guard.py  c1a_evidence.py  c1a_source_inventory.py  c2a_data_guard.py  c2a_evidence.py  c2a_source_inventory.py  c3a_contract_guard.py  c3a_data_guard.py  c3a_evidence.py  c3a_reference_recompute.py  c3a_source_inventory.py  c4a_contract_guard.py  c4a_data_guard.py  c4a_evidence.py  (+86 more)
(+453 files in other folders)
